--- a/projectdetails.html
+++ b/projectdetails.html
@@ -63,7 +63,7 @@ font-size:30px;
 </head>
 <body>
 <div class="contain">
-<img src="C:\Users\Aquaculture\aqua\images\logo.webp" alt="Description of image" class="float-img">
+<img src="logo.webp" alt="Description of image" class="float-img">
 <div class="text-content">
 <h1><font size="6" color="red" face="fancy">GEETHANJALI INSTITUTE OF SCIENCE AND TECHNOLOGY(NELLORE)</font></h1>
 <h2><b><font size="6" color="navy blue" face="graphite light att"><center>DEPT OF CYBER SECURITY</CENTER></font></b></H2>
@@ -98,7 +98,7 @@ We collected quantitative and qualitative data on various parameters, such as pr
 <h2>Findings</h2>
 <p>Sustainable aquaculture practices in Muthukur have the potential to reduce overfishing and support the conservation of wild fish populations. Techniques like Integrated Multi-Trophic Aquaculture (IMTA) can help maintain a balanced ecosystem by utilizing waste products from one species as nutrients for another.<br><br>
 <h1 class=head><CENTER>ABSTRACT</CENTER></H1>
-<center><img src="C:\Users\Aquaculture\aqua\CSP_ABSTRACTnew.jpg" width="1000px" height="1500px border="10px"></center>
+<center><img src="CSP_ABSTRACTnew.jpg" width="1000px" height="1500px border="10px"></center>
 </body>
 </html>
 
