--- a/IMPORTANCE.HTML
+++ b/IMPORTANCE.HTML
@@ -82,7 +82,7 @@ font-size:30px;
 </head>
 <body>
 <div class="contain">
-<img src="C:\Users\Aquaculture\aqua\images\logo.webp" alt="Description of image" class="float-img">
+<img src="\images\logo.webp" alt="Description of image" class="float-img">
 <div class="text-content">
 <h1><font size="6" color="red" face="fancy">GEETHANJALI INSTITUTE OF SCIENCE AND TECHNOLOGY(NELLORE)</font></h1>
 <h2><b><font size="6" color="navy blue" face="graphite light att"><center>DEPT OF CYBER SECURITY</CENTER></font></b></H2>
@@ -113,8 +113,8 @@ font-size:30px;
 <p>Diversifying food sources through aquaculture reduces dependence on terrestrial agriculture and wild fisheries, helping to create a more resilient food system. This is especially important in regions prone to food shortages or where traditional agriculture is challenging.</p>
 </div>
 <div class="image-column">
-        <img src="C:\Users\Aquaculture\aqua\images\food1.avif" alt="Description of image" class="float-image">
-        <img src="C:\Users\Aquaculture\aqua\images\food.jpg"alt="Description of image" class="float-image">
+        <img src="\images\food1.avif" alt="Description of image" class="float-image">
+        <img src="\images\food.jpg"alt="Description of image" class="float-image">
 
 </div>
 </div>
