--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ color:black;
 </style>
 a
 </head>
-<body background="/images/bg.2.jpg" >
+<body background="images/bg.2.jpg" >
 <header>
 <h1><center><font size="7" color="red" face="fancy">GEETHANJALI INSTITUTE OF SCIENCE AND TECHNOLOGY</font></center></h1>
 <h2><b><font size="6" color="navy blue" face="graphite light att"><center>DEPT OF CYBER SECURITY</CENTER></font></b></H2>
