--- a/IMPORTANCE.HTML
+++ b/IMPORTANCE.HTML
@@ -82,7 +82,7 @@ font-size:30px;
 </head>
 <body>
 <div class="contain">
-<img src="\images\logo.webp" alt="Description of image" class="float-img">
+<img src="images\logo.webp" alt="Description of image" class="float-img">
 <div class="text-content">
 <h1><font size="6" color="red" face="fancy">GEETHANJALI INSTITUTE OF SCIENCE AND TECHNOLOGY(NELLORE)</font></h1>
 <h2><b><font size="6" color="navy blue" face="graphite light att"><center>DEPT OF CYBER SECURITY</CENTER></font></b></H2>
@@ -113,8 +113,8 @@ font-size:30px;
 <p>Diversifying food sources through aquaculture reduces dependence on terrestrial agriculture and wild fisheries, helping to create a more resilient food system. This is especially important in regions prone to food shortages or where traditional agriculture is challenging.</p>
 </div>
 <div class="image-column">
-        <img src="\images\food1.avif" alt="Description of image" class="float-image">
-        <img src="\images\food.jpg"alt="Description of image" class="float-image">
+        <img src="images\food1.avif" alt="Description of image" class="float-image">
+        <img src="images\food.jpg"alt="Description of image" class="float-image">
 
 </div>
 </div>
@@ -131,8 +131,8 @@ font-size:30px;
 <p>Aquaculture products are important in international trade. Countries like Norway, Chile, and Vietnam are major exporters of farmed seafood, which contributes to their economic growth and development.</p>
 </div>
 <div class="image-column">
-        <img src="C:\Users\Aquaculture\aqua\images\ex.jpg" alt="Description of image" class="float-image">
-        <img src="C:\Users\Aquaculture\aqua\images\export.jpg"alt="Description of image" class="float-image">
+        <img src="images\ex.jpg" alt="Description of image" class="float-image">
+        <img src="images\export.jpg"alt="Description of image" class="float-image">
 
 </div>
 </div>
@@ -150,7 +150,7 @@ font-size:30px;
 <p>Sustainable aquaculture practices, such as Integrated Multi-Trophic Aquaculture (IMTA) and Recirculating Aquaculture Systems (RAS), minimize environmental impact. IMTA uses waste from one species as nutrients for another, creating a balanced ecosystem, while RAS recycles water, reducing the need for large water bodies and minimizing pollution.</p>
 </div>
 <div class="image-column">
-        <img src="C:\Users\Aquaculture\aqua\images\imta.jpg"alt="Description of image" class="float-image">
+        <img src="images\imta.jpg"alt="Description of image" class="float-image">
 
 </div>
 </div>
@@ -170,7 +170,7 @@ font-size:30px;
 <p>Advances in feed technology, such as the development of alternative protein sources (e.g., insect meal, algae), reduce reliance on wild fish for feed and lower the environmental footprint of aquaculture.</p>
 </div>
 <div class="image-column">
-        <img src="C:\Users\Aquaculture\aqua\images\re.jpg"alt="Description of image" class="float-image">
+        <img src="images\re.jpg"alt="Description of image" class="float-image">
 
 </div>
 </div>
@@ -188,7 +188,7 @@ font-size:30px;
 <p>Aquaculture projects and farms often serve as educational sites, promoting awareness and understanding of sustainable food production among students, researchers, and the public.</p>
 </div>
 <div class="image-column">
-        <img src="C:\Users\Aquaculture\aqua\images\hb1.jpg"alt="Description of image" class="float-image">
+        <img src="images\hb1.jpg"alt="Description of image" class="float-image">
 
 </div>
 </div>
@@ -204,7 +204,7 @@ font-size:30px;
 <p>Marine aquaculture, especially seaweed farming, plays a role in sequestering carbon dioxide from the atmosphere, contributing to the reduction of greenhouse gases. Seaweed absorbs CO2 during photosynthesis, which helps mitigate climate change.</p>
 </div>
 <div class="image-column">
-        <img src="C:\Users\Aquaculture\aqua\images\hb.jpg"alt="Description of image" class="float-image">
+        <img src="images\hb.jpg"alt="Description of image" class="float-image">
 
 </div>
 </div>
