--- a/ABOUT.HTML
+++ b/ABOUT.HTML
@@ -83,7 +83,7 @@ font-size:30px;
 </head>
 <body>
 <div class="container">
-<img src="logo.webp" alt="Description of image" class="float-image">
+<img src="images/logo.webp" alt="Description of image" class="float-image">
 <div class="text-content">
 <h1><font size="6" color="red" face="fancy">GEETHANJALI INSTITUTE OF SCIENCE AND TECHNOLOGY(NELLORE)</font></h1>
 <h2><b><font size="6" color="navy blue" face="graphite light att"><center>DEPT OF CYBER SECURITY</CENTER></font></b></H2>
@@ -116,7 +116,7 @@ Aquaculture, also known as aquafarming, involves cultivating freshwater and salt
 <p>Brackish water aquaculture involves the farming of aquatic species in water with a mix of fresh and saltwater, typically found in estuaries and coastal lagoons. This type of aquaculture supports the production of species like shrimp and certain types of fish that thrive in such environments. It contributes to food security and local economies while requiring careful management to balance ecological impacts.</p> 
 
 <div class="image-container">
-<img src="marine-aquaculture.jpg" width="250" height="250" class="styled-image" alt="Marine Aqua culture" > <img src="New-Fish-Ponds-4.jpg" width="250" height="250" class="styled-image" alt="Freshwater Aqua culture " > <img src="Banner_Blogbeitrag-RAS.jpg.jpeg"  width="250" height="250" class="styled-image" alt="Brackishwater Aqua culture" >
+<img src="images/marine-aquaculture.jpg" width="250" height="250" class="styled-image" alt="Marine Aqua culture" > <img src="images/New-Fish-Ponds-4.jpg" width="250" height="250" class="styled-image" alt="Freshwater Aqua culture " > <img src="images/Banner_Blogbeitrag-RAS.jpg.jpeg"  width="250" height="250" class="styled-image" alt="Brackishwater Aqua culture" >
 </div>
 
 <H2><FONT COLOR="FUCHSIA" FACE="">METHODS</FONT></H2>
