--- a/Surveydetails.html
+++ b/Surveydetails.html
@@ -50,7 +50,7 @@ color:black;
 </head>
 <body>
 <div class="container">
-<img src="C:\Users\Aquaculture\aqua\images\logo.webp"alt="Description of image" class="float-image">
+<img src="images\logo.webp"alt="Description of image" class="float-image">
 <div class="text-content">
 <h1><font size="6" color="red" face="fancy">GEETHANJALI INSTITUTE OF SCIENCE AND TECHNOLOGY(NELLORE)</font></h1>
 <h2><b><font size="6" color="navy blue" face="graphite light att"><center>DEPT OF CYBER SECURITY</CENTER></font></b></H2>
@@ -65,11 +65,11 @@ color:black;
 <a href="reports.html">REPORTS</a>
 <a href="gallery.html">GALLERY</a>
 </nav>
-<center><img src="C:\Users\Aquaculture\aqua\csp\Screenshot 2024-12-12 204311.png"width="1000px" height="1500px border="10px"></center>
-<center><img src="C:\Users\Aquaculture\aqua\csp\Screenshot 2024-12-12 204327.png" width="1000px" height="1500px border="10px"></center>
-<center><img src="C:\Users\Aquaculture\aqua\csp\Screenshot 2024-12-12 204410.png" width="1000px" height="1500px border="10px"></center>
-<center><img src="C:\Users\Aquaculture\aqua\csp\Screenshot 2024-12-12 203803.png"width="1000px" height="1500px border="10px"></center>
-<center><img src="C:\Users\Aquaculture\aqua\csp\Screenshot 2024-12-12 203818.png" width="1000px" height="1500px border="10px"></center>
+<center><img src="csp\Screenshot 2024-12-12 204311.png"width="1000px" height="1500px border="10px"></center>
+<center><img src="csp\Screenshot 2024-12-12 204327.png" width="1000px" height="1500px border="10px"></center>
+<center><img src="csp\Screenshot 2024-12-12 204410.png" width="1000px" height="1500px border="10px"></center>
+<center><img src="csp\Screenshot 2024-12-12 203803.png"width="1000px" height="1500px border="10px"></center>
+<center><img src="csp\Screenshot 2024-12-12 203818.png" width="1000px" height="1500px border="10px"></center>
 </body>
 </html>
  
