--- a/projectdetails.html
+++ b/projectdetails.html
@@ -63,7 +63,7 @@ font-size:30px;
 </head>
 <body>
 <div class="contain">
-<img src="logo.webp" alt="Description of image" class="float-img">
+<img src="images/logo.webp" alt="Description of image" class="float-img">
 <div class="text-content">
 <h1><font size="6" color="red" face="fancy">GEETHANJALI INSTITUTE OF SCIENCE AND TECHNOLOGY(NELLORE)</font></h1>
 <h2><b><font size="6" color="navy blue" face="graphite light att"><center>DEPT OF CYBER SECURITY</CENTER></font></b></H2>
