--- a/reports.html
+++ b/reports.html
@@ -50,7 +50,7 @@ color:black;
 </head>
 <body>
 <div class="container">
-<img src="C:\Users\Aquaculture\aqua\images\logo.webp"alt="Description of image" class="float-image">
+<img src="images\logo.webp"alt="Description of image" class="float-image">
 <div class="text-content">
 <h1><font size="6" color="red" face="fancy">GEETHANJALI INSTITUTE OF SCIENCE AND TECHNOLOGY(NELLORE)</font></h1>
 <h2><b><font size="6" color="navy blue" face="graphite light att"><center>DEPT OF CYBER SECURITY</CENTER></font></b></H2>
@@ -65,18 +65,18 @@ color:black;
 <a href="reports.html">REPORTS</a>
 <a href="gallery.html">GALLERY</a>
 </nav>
-<center><img src="C:\Users\Aquaculture\aqua\csp\Screenshot 2024-12-12 191815.png"width="1000px" height="1500px border="10px"></center>
-<center><img src="C:\Users\Aquaculture\aqua\csp\Screenshot 2024-12-12 191842.png" width="1000px" height="1500px border="10px"></center>
-<center><img src="C:\Users\Aquaculture\aqua\csp\Screenshot 2024-12-12 191856.png" width="1000px" height="1500px border="10px"></center>
-<center><img src="C:\Users\Aquaculture\aqua\csp\Screenshot 2024-12-12 191921.png"width="1000px" height="1500px border="10px"></center>
-<center><img src="C:\Users\Aquaculture\aqua\csp\Screenshot 2024-12-12 191939.png" width="1000px" height="1500px border="10px"></center>
-<center><img src="C:\Users\Aquaculture\aqua\csp\Screenshot 2024-12-12 191957.png" width="1000px" height="1500px border="10px"></center>
-<center><img src="C:\Users\Aquaculture\aqua\csp\Screenshot 2024-12-12 192012.png" width="1000px" height="1500px border="10px"></center>
-<center><img src="C:\Users\Aquaculture\aqua\csp\Screenshot 2024-12-12 192028.png" width="1000px" height="1500px border="10px"></center>
-<center><img src="C:\Users\Aquaculture\aqua\csp\Screenshot 2024-12-12 192045.png" width="1000px" height="1500px border="10px"></center>
-<center><img src="C:\Users\Aquaculture\aqua\csp\Screenshot 2024-12-12 192058.png" width="1000px" height="1500px border="10px"></center>
-<center><img src="C:\Users\Aquaculture\aqua\csp\Screenshot 2024-12-12 192116.png"width="1000px" height="1500px border="10px"></center>
-<center><img src="C:\Users\Aquaculture\aqua\csp\Screenshot 2024-12-12 192131.png" width="1000px" height="1500px border="10px"></center>
+<center><img src="csp\Screenshot 2024-12-12 191815.png"width="1000px" height="1500px border="10px"></center>
+<center><img src="csp\Screenshot 2024-12-12 191842.png" width="1000px" height="1500px border="10px"></center>
+<center><img src="csp\Screenshot 2024-12-12 191856.png" width="1000px" height="1500px border="10px"></center>
+<center><img src="csp\Screenshot 2024-12-12 191921.png"width="1000px" height="1500px border="10px"></center>
+<center><img src="csp\Screenshot 2024-12-12 191939.png" width="1000px" height="1500px border="10px"></center>
+<center><img src="csp\Screenshot 2024-12-12 191957.png" width="1000px" height="1500px border="10px"></center>
+<center><img src="csp\Screenshot 2024-12-12 192012.png" width="1000px" height="1500px border="10px"></center>
+<center><img src="csp\Screenshot 2024-12-12 192028.png" width="1000px" height="1500px border="10px"></center>
+<center><img src="csp\Screenshot 2024-12-12 192045.png" width="1000px" height="1500px border="10px"></center>
+<center><img src="csp\Screenshot 2024-12-12 192058.png" width="1000px" height="1500px border="10px"></center>
+<center><img src="csp\Screenshot 2024-12-12 192116.png"width="1000px" height="1500px border="10px"></center>
+<center><img src="csp\Screenshot 2024-12-12 192131.png" width="1000px" height="1500px border="10px"></center>
 
 
     
